2008-11-11  Esteban Sanchez  <estebans@artica.es>

	* general/login_page.php: Show a message if login proccess failed.

	* general/logon_failed.php: Removed from repository.

	* index.php: Do not redirect to logon_failed anymore.

	* include/styles/integria.css: Removed unused styles and height
	property of login div element.

	* include/js/integria_incident_search.js: Added sort options to first
	column (id) in inventories and incidents tables.

	* include/js/jquery.tablesorter.js: Little hack added to currency
	parser.

2008-11-11  Sancho Lerena <slerena@artica.es>
	
	* index.php: Update link menu, now associated to Agenda ACL check.

	* integria_dbdata.sql: Updated version number in SQL:

2008-11-10  Esteban Sanchez  <estebans@artica.es>

	* include/styles/integria.css: Added style to show order arrow in
	sorting tables.

2008-11-10  Esteban Sanchez  <estebans@artica.es>

	* operation/companies/company_detail.php: Fixed type error when
	fetching company id.

	* include/functions_graph.php: Do not show any error on
	generic_graph().

	* operation/incidents/type_detail.php: Fixed table width to work in
	IE6+.

2008-11-10  Esteban Sanchez  <estebans@artica.es>
	
	* include/functions_form.php: Added support to search by incident
	type. Also it's now possible to search by company.

	* operation/companies/company_detail.php: Added link to contracts and
	contacts.

	* operation/incidents/incident.php: Style correction. Removed
	$id_usuario and replaced by $config.

	* operation/incidents/incident_search.php: Added support to search by
	incident type.

2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* operation/incidents/incident.php: Default search now only show new
	incidents.

	* include/functions_db.php: Fixed an error in incident_tracking that
	cause not showing user name and a PHP notice. Show nothing on
	sql_error_handler() based on error_reporting() level.

2008-11-07  Esteban Sanchez  <estebans@artica.es>
